--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.module.sayem.foodculture"
         minSdkVersion 21
@@ -29,6 +34,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.github.GrenderG:Toasty:1.2.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
