--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,16 @@ dependencies {
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.github.GrenderG:Toasty:1.2.5'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    // Java8 support for Lifecycles
+    implementation "android.arch.lifecycle:common-java8:1.1.1"
+    // Room (use 1.1.0-beta2 for latest beta)
+    implementation "android.arch.persistence.room:runtime:1.1.0-beta2"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.0-beta2"
+
+    // Test helpers for Room
+    testImplementation "android.arch.persistence.room:testing:1.0.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.android.support:cardview-v7:26.1.0'
 }
